Removed height and width

--- a/index.html
+++ b/index.html
@@ -37,39 +37,17 @@
   </div>
   <form>
     <p>
-      Length:
+      Radius:
     </p>
     <div class="mdl-textfield mdl-js-textfield">
       <!-- input pattern attribute -->
-      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="length" />
+      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="radius" />
       <!-- mdl-textfield__label -->
-      <label class="mdl-textfield__label" for="length"></label>
+      <label class="mdl-textfield__label" for="radius"></label>
       <!-- class "mdl-textfield__error" -->
       <span class="mdl-textfield__error">| Step 1</span>
     </div>
-    <p>
-      Width:
-    </p>
-    <div class="mdl-textfield__input">
-      <!-- input pattern attribute  -->
-      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="width" />
-      <!-- mdl-textfield__label -->
-      <label class="mdl-textfield__label" for="width"></label>
-      <!-- class "mdl-textfield__error" -->
-      <span class="mdl-textfield__error">| Step 2</span>
-    </div>
-    <br />
-    <p>
-      Height:
-    </p>
-    <div class="mdl-textfield__input">
-      <!-- input pattern attribute  -->
-      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="height" />
-      <!-- mdl-textfield__label -->
-      <label class="mdl-textfield__label" for="height"></label>
-      <!-- class "mdl-textfield__error" -->
-      <span class="mdl-textfield__error">| Step 3</span>
-    </div>
+    
 
     <br />
     <main id="clickme" class="mdl-layout__content">
